Move main.c to fail.c (UAF demo) and add success.c example

--- a/src/BUILD.bazel
+++ b/src/BUILD.bazel
@@ -1,4 +1,9 @@
 cc_binary(
-    name = "hello",
-    srcs = ["main.c"],
+    name = "fail",
+    srcs = ["fail.c"],
+)
+
+cc_binary(
+    name = "success",
+    srcs = ["success.c"],
 )
